// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> Error story renders snapshot 1`] = `
<div
  class="toast toast--error"
>
  <div
    class="toast__content"
  >
    <svg
      class="icon"
      fill="var(--icon-color)"
      height="1.25rem"
      role="img"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="2"
      >
        error
      </title>
      <use
        xlink:href="test-file-stub#cancel"
      />
    </svg>
    <p
      class="toast__text"
    >
      You've got toast!
    </p>
  </div>
</div>
`;

exports[`<Toast /> NotDismissable story renders snapshot 1`] = `
<div
  class="toast toast--success"
>
  <div
    class="toast__content"
  >
    <svg
      class="icon"
      fill="var(--icon-color)"
      height="1.25rem"
      role="img"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="3"
      >
        success
      </title>
      <use
        xlink:href="test-file-stub#check-circle"
      />
    </svg>
    <p
      class="toast__text"
    >
      You've got toast!
    </p>
  </div>
</div>
`;

exports[`<Toast /> Success story renders snapshot 1`] = `
<div
  class="toast toast--success"
>
  <div
    class="toast__content"
  >
    <svg
      class="icon"
      fill="var(--icon-color)"
      height="1.25rem"
      role="img"
      style="--icon-size: 1.25rem;"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="1"
      >
        success
      </title>
      <use
        xlink:href="test-file-stub#check-circle"
      />
    </svg>
    <p
      class="toast__text"
    >
      You've got toast!
    </p>
  </div>
</div>
`;
